<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/logged">
        <item
            android:id="@+id/sign_out"
            android:orderInCategory="100"
            android:title="@string/sign_out"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/not_logged">
        <item
            android:id="@+id/sign_in"
            android:orderInCategory="100"
            android:title="@string/log_in"
            app:showAsAction="never" />
        <item
            android:id="@+id/sign_up"
            android:orderInCategory="100"
            android:title="@string/sign_up"
            app:showAsAction="never" />
    </group>
</menu>